--- a/TimeStyle.css
+++ b/TimeStyle.css
@@ -1,4 +1,6 @@
 body {
+    align-items: center;
+    text-align: center;
     background: rgb(171, 171, 231);
     font: normal 20pt Arial;
 }
@@ -15,8 +17,7 @@ section {
     width: 500px;
     margin: auto;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.548);
-    text-align: center;
-    /* Centraliza conteúdo, incluindo a imagem */
+    
 }
 
 footer {
